force-app/main/default/objects/Case/fields/Ambitos__c.field-meta.xml
<CustomField>
    <fullName>Ambitos__c</fullName>
    <label>Ámbitos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ambitos</valueSetName>
    </valueSet>
</CustomField>
 