force-app/main/default/objects/Case/fields/Ayuntamientos__c.field-meta.xml
<CustomField>
    <fullName>Ayuntamientos__c</fullName>
    <label>Entidad 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Entidades__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Ayuntamientos</valueSetName>
    </valueSet>
</CustomField>