force-app/main/default/objects/Case/fields/Dias_transcurridos_entre_cambio_estado__c.field-meta.xml
<CustomField>
    <fullName>Dias_transcurridos_entre_cambio_estado__c</fullName>
    <formula>FLOOR((NOW()- Fecha_hora_cambio_de_estado__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días transcurridos entre cambio estado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>