force-app/main/default/objects/Case/fields/Es_el_propietatio__c.field-meta.xml
<CustomField>
    <fullName>Es_el_propietatio__c</fullName>
    <formula>OwnerId  ==  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es el propietatio</label>
    <type>Checkbox</type>
</CustomField>