force-app/main/default/objects/Case/fields/Estado_En_espera__c.field-meta.xml
<CustomField>
    <fullName>Estado_En_espera__c</fullName>
    <label>Estado En espera</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interno</fullName>
            </value>
            <value>
                <fullName>Ciudadano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>