force-app/main/default/objects/Case/fields/Estado_finalizado__c.field-meta.xml
<CustomField>
    <fullName>Estado_finalizado__c</fullName>
    <label>Estado finalizado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resuelto</fullName>
            </value>
            <value>
                <fullName>No resuelto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>