force-app/main/default/objects/Case/fields/Fecha_hora_cambio_de_estado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_hora_cambio_de_estado__c</fullName>
    <label>Fecha/hora cambio de estado</label>
    <type>DateTime</type>
</CustomField>