force-app/main/default/objects/Case/fields/Informacion_faltante__c.field-meta.xml
<CustomField>
    <fullName>Informacion_faltante__c</fullName>
    <label>Información faltante</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>