force-app/main/default/objects/Case/fields/Informacion_faltante_ciudadano__c.field-meta.xml
<CustomField>
    <fullName>Informacion_faltante_ciudadano__c</fullName>
    <label>Información faltante ciudadano</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>