force-app/main/default/objects/Case/fields/Motivo_no_resolucion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_no_resolucion__c</fullName>
    <label>Motivo no resolución</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>