force-app/main/default/objects/Case/fields/Motivo_reapertura_caso__c.field-meta.xml
<CustomField>
    <fullName>Motivo_reapertura_caso__c</fullName>
    <label>Motivo reapertura caso</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>