force-app/main/default/objects/Case/fields/Motivo_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Resolucion__c</fullName>
    <label>Resolución</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>