force-app/main/default/objects/Case/fields/Pasaron_10_dias__c.field-meta.xml
<CustomField>
    <fullName>Pasaron_10_dias__c</fullName>
    <formula>AND(
   MOD(FLOOR((NOW() - Fecha_hora_cambio_de_estado__c)), 10) = 0,
   FLOOR((NOW() - Fecha_hora_cambio_de_estado__c)) &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pasaron 10 días?</label>
    <type>Checkbox</type>
</CustomField>