force-app/main/default/objects/Case/fields/Pasaron_7_dias__c.field-meta.xml
<CustomField>
    <fullName>Pasaron_7_dias__c</fullName>
    <formula>MOD(FLOOR((NOW()- Fecha_hora_cambio_de_estado__c)),7)= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pasaron 7 días?</label>
    <type>Checkbox</type>
</CustomField>