force-app/main/default/objects/Case/fields/Resuelto__c.field-meta.xml
<CustomField>
    <fullName>Resuelto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para marcar si la petición fue resuelta.</description>
    <label>Resuelto</label>
    <type>Checkbox</type>
</CustomField>