force-app/main/default/objects/Case/fields/Ultima_informacion_faltante_interna__c.field-meta.xml
<CustomField>
    <fullName>Ultima_informacion_faltante_interna__c</fullName>
    <label>Última información faltante interna</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>