force-app/main/default/objects/Case/recordTypes/Casos.recordType-meta.xml
<RecordType>
    <fullName>Casos</fullName>
    <active>true</active>
    <businessProcess>Caso</businessProcess>
    <label>Casos</label>
</RecordType>