force-app/main/default/objects/Case/recordTypes/Peticiones.recordType-meta.xml
<RecordType>
    <fullName>Peticiones</fullName>
    <active>true</active>
    <businessProcess>Peticiones</businessProcess>
    <label>Peticiones</label>
</RecordType>