force-app/main/default/objects/Case/validationRules/Email_to_Case_Subject_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_to_Case_Subject_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Origin, &quot;email&quot;),
    ISBLANK(Subject)
)</errorConditionFormula>
    <errorMessage>Necesitas un subject para crear el caso</errorMessage>
</ValidationRule>