force-app/main/default/objects/Case/validationRules/Prevent_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Change_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()), 

      ISCHANGED( OwnerId ), 

      $Profile.Name  = &apos;Agente&apos; 

     )</errorConditionFormula>
    <errorMessage>No puede modificar este campo. Por favor, reclasifique el caso, reasígnelo o contacte con su supervisor.</errorMessage>
</ValidationRule>