force-app/main/default/objects/Case/validationRules/Restrict_Manual_Case_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Manual_Case_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    OR(
        ISPICKVAL(Origin, &quot;Email&quot;),
        ISPICKVAL(Origin, &quot;Web&quot;)
    )
)</errorConditionFormula>
    <errorMessage>El origen del caso no puede ser &quot;Correo Electrónico&quot; o &quot;Web&quot;. Por favor, revise el origen del caso.</errorMessage>
</ValidationRule>