force-app/main/default/objects/Case/listViews/Asesoria_Juridica_Case.listView-meta.xml
<ListView>
    <fullName>Asesoria_Juridica_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Asesoria Jurídica</label>
    <queue>Asesoria_Juridica</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>