force-app/main/default/objects/Case/listViews/Benestar_Case.listView-meta.xml
<ListView>
    <fullName>Benestar_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Benestar</label>
    <queue>Benestar</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>