force-app/main/default/objects/Case/listViews/Benestar_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Benestar_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Benestar Cases</label>
    <queue>Benestar_Cases</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>