force-app/main/default/objects/Case/listViews/Contratacion_Case.listView-meta.xml
<ListView>
    <fullName>Contratacion_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Contratación</label>
    <queue>Contratacion</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>