force-app/main/default/objects/Case/listViews/Cultura_y_Deportes_Case.listView-meta.xml
<ListView>
    <fullName>Cultura_y_Deportes_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cultura y Deportes</label>
    <queue>Cultura_y_Deportes</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>