force-app/main/default/objects/Case/listViews/Estado_En_espera_interno.listView-meta.xml
<ListView>
    <fullName>Estado_En_espera_interno</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Fecha_hora_cambio_de_estado__c</columns>
    <columns>Dias_transcurridos_entre_cambio_estado__c</columns>
    <columns>Pasaron_7_dias__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>En espera,On Hold</value>
    </filters>
    <filters>
        <field>Estado_En_espera__c</field>
        <operation>equals</operation>
        <value>Interno</value>
    </filters>
    <label>Estado En espera interno</label>
</ListView>