force-app/main/default/objects/Case/listViews/Infraestructuras_Case.listView-meta.xml
<ListView>
    <fullName>Infraestructuras_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Infraestructuras (Vías y Obras)</label>
    <queue>Infraestructuras</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>