force-app/main/default/objects/Case/listViews/Intervencion_Case.listView-meta.xml
<ListView>
    <fullName>Intervencion_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Intervención</label>
    <queue>Intervencion</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>