force-app/main/default/objects/Case/listViews/Medio_Ambiente_Case.listView-meta.xml
<ListView>
    <fullName>Medio_Ambiente_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Medio Ambiente</label>
    <queue>Medio_Ambiente</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>