force-app/main/default/objects/Case/listViews/Otras_Case.listView-meta.xml
<ListView>
    <fullName>Otras_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Otras</label>
    <queue>Otras</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>