force-app/main/default/objects/Case/listViews/Q1_Case.listView-meta.xml
<ListView>
    <fullName>Q1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>General</label>
    <queue>General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>