force-app/main/default/objects/Case/listViews/Recaudacion_Case.listView-meta.xml
<ListView>
    <fullName>Recaudacion_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Recaudación</label>
    <queue>Recaudacion</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>